src/objects/Web_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>(CreatedDate - Timestamp__c)*86400</formula>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_id__c</fullName>
        <label>Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result_Code__c</fullName>
        <label>Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Detail__c</fullName>
        <label>Result Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Web Service Log</label>
    <nameField>
        <displayFormat>LOG# {00000000}</displayFormat>
        <label>Web Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Service Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>